# Modular-ECS

./: .gitignore  CMakeLists.txt  Doxyfile.in  Entity_8h_source.html  Manager_8h_source.html  MiscMetafunctions_8h_source.html  Modular-ECS.kdev4  SegmentedMap_8h_source.html  annotated.html  classSegmentedMap-members.html  classSegmentedMap.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  format-code.sh  functions.html  functions_func.html  hierarchy.html  index.html  namespacedetail.html  namespaces.html  structEntity-members.html  structEntity.html  structManager-members.html  structManager.html  structManagerBase.html  structManagerData.html  structSegmentedMap_1_1const__iterator-members.html  structSegmentedMap_1_1const__iterator.html  structSegmentedMap_1_1iterator-members.html  structSegmentedMap_1_1iterator.html  structget__index__of__first__matching__t-members.html  structget__index__of__first__matching__t.html  update-docs.sh
.kdev4/: Modular-ECS.kdev4
include/: .Manager.h.kate-swp  Entity.h  Manager.h  MiscMetafunctions.h  SegmentedMap.h  entity.hpp  manager.hpp  misc_metafunctions.hpp
include/ecs/: manager.hpp  misc_metafunctions.hpp  segmented_map.hpp
search/: all_3.js  all_4.js  all_6.js  classes_0.js  classes_2.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
test/: CMakeLists.txt  manager_metafunctions.cpp  metafunctions.cpp  num_components.cpp
